flickering animation and fix cell detail button click

--- a/src/app/learn-cell/learn-cell.component.css
+++ b/src/app/learn-cell/learn-cell.component.css
@@ -4,8 +4,18 @@
     cursor: pointer;
 }
 
-.center-image:hover{
+.center-image:hover {
     filter: alpha(opacity=100);
     opacity: 1;
 }
 
+@keyframes flickerAnimation {
+    0%{opacity: 1;}
+    50%{opacity: 0;}
+    100%{opacity: 1;}
+
+}
+
+.animate-flicker {
+    animation: flickerAnimation 2s 2;
+}
